// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationCenter should render with corner styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 400px;
  max-width: 90vw;
  max-width: calc(100vw - 48px);
  position: fixed;
  top: 24px;
  left: 24px;
}

.circuit-0 > * {
  margin-top: 16px;
}

.circuit-0 > *:first-child {
  margin-top: 0;
}

<div
  aria-live="polite"
  className="circuit-0 circuit-1"
/>
`;

exports[`NotificationCenter should render with corner styles 2`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 400px;
  max-width: 90vw;
  max-width: calc(100vw - 48px);
  position: fixed;
  top: 24px;
  right: 24px;
}

.circuit-0 > * {
  margin-top: 16px;
}

.circuit-0 > *:first-child {
  margin-top: 0;
}

<div
  aria-live="polite"
  className="circuit-0 circuit-1"
/>
`;

exports[`NotificationCenter should render with corner styles 3`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 400px;
  max-width: 90vw;
  max-width: calc(100vw - 48px);
  position: fixed;
  bottom: 24px;
  right: 24px;
}

.circuit-0 > * {
  margin-top: 16px;
}

.circuit-0 > *:first-child {
  margin-top: 0;
}

<div
  aria-live="polite"
  className="circuit-0 circuit-1"
/>
`;

exports[`NotificationCenter should render with corner styles 4`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 400px;
  max-width: 90vw;
  max-width: calc(100vw - 48px);
  position: fixed;
  bottom: 24px;
  left: 24px;
}

.circuit-0 > * {
  margin-top: 16px;
}

.circuit-0 > *:first-child {
  margin-top: 0;
}

<div
  aria-live="polite"
  className="circuit-0 circuit-1"
/>
`;

exports[`NotificationCenter should render with default styles 1`] = `
.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 400px;
  max-width: 90vw;
  max-width: calc(100vw - 48px);
  position: fixed;
  bottom: 24px;
  right: 24px;
}

.circuit-2 > * {
  margin-top: 16px;
}

.circuit-2 > *:first-child {
  margin-top: 0;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-width: 400px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 2px 2px 0 rgba(12,15,20,0.06), 0 4px 4px 0 rgba(12,15,20,0.06);
  padding: 16px 16px;
}

<div
  aria-live="polite"
  className="circuit-2 circuit-3"
>
  <div
    className="circuit-0 circuit-1"
    spacing="mega"
  >
    <div />
  </div>
</div>
`;

exports[`NotificationCenter should render with positional styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 400px;
  max-width: 90vw;
  max-width: calc(100vw - 48px);
  position: fixed;
  bottom: 24px;
  right: 24px;
}

.circuit-0 > * {
  margin-top: 16px;
}

.circuit-0 > *:first-child {
  margin-top: 0;
}

<div
  aria-live="polite"
  className="circuit-0 circuit-1"
/>
`;

exports[`NotificationCenter should render with positional styles 2`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 400px;
  max-width: 90vw;
  max-width: calc(100vw - 48px);
  position: absolute;
  bottom: 24px;
  right: 24px;
}

.circuit-0 > * {
  margin-top: 16px;
}

.circuit-0 > *:first-child {
  margin-top: 0;
}

<div
  aria-live="polite"
  className="circuit-0 circuit-1"
/>
`;
